# DispatherOne

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
apps/driver-pwa/: app.js  index.html  (+3 more)
docs/: api-contract-v0.md
scripts/: build_macos_dmg.sh  build_windows.ps1
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: google_maps.rs  lib.rs  main.rs
src-tauri/src/commands/: admin.rs  assignments.rs  calls.rs  dashboard.rs  drivers.rs  events.rs  google_maps.rs  mod.rs  nearby.rs  ocr.rs  reports.rs  search.rs  settings.rs  shifts.rs  units.rs
src-tauri/src/db/: admin_repo.rs  assignments_repo.rs  calls_repo.rs  dashboard_repo.rs  distance_repo.rs  drivers_repo.rs  events_repo.rs  geocode_repo.rs  mod.rs  nearby_repo.rs  ocr_repo.rs  reports_repo.rs  search_repo.rs  settings_repo.rs  shifts_repo.rs  units_repo.rs
src-tauri/src/db/migrations/: 0003_calls.sql  0004_call_assignments.sql  0006_settings.sql  0007_driver_shifts.sql  0009_driver_truck_assignments.sql  0010_rate_rules.sql  0011_ocr_imports.sql  0012_address_geocodes.sql  0014_call_driver_distance_cache.sql  0015_calls_notes_priority.sql  0016_driver_last_location_text.sql  0017_contact_id.sql  0018_unit_positions.sql
src-tauri/src/migrations/: 0001_init.sql  0002_drivers.sql  0005_events.sql  0008_trucks.sql  0013_driver_last_location.sql
src-tauri/src/models/: aaa.rs  call.rs  dashboard.rs  driver.rs  event.rs  mod.rs  ocr.rs  report.rs  search.rs  shift.rs  unit.rs
(+18 files in other folders)
